# DEVIL

./: README.md  cal_temporal_info.sh  cal_temporal_info_1.sh  eval_dynamic_dist.sh  eval_dynamics_dist.sh  eval_temporal_info.sh  proxy.sh  requirements.txt
geminiplayground/: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  web.ps1  web.sh
geminiplayground/.github/workflows/: pre_release.yml  pull_request.yml  release.yml
geminiplayground/examples/: chat.py  chat_wit_your_code.py  chat_with_your_audios.py  chat_with_your_data.py  chat_with_your_images.py  chat_with_your_pdf.py  chat_with_your_video.py  delete_all_files.py  delete_cache.py  gemini_client_api.py  list_all_files.py  list_models.py  multimodal.py  playground_api.py  readme_example.py  stream.py
geminiplayground/src/geminiplayground/: __init__.py  catching.py  cli.py
geminiplayground/src/geminiplayground/core/: __init__.py  gemini_client.py  gemini_playground.py
geminiplayground/src/geminiplayground/parts/: __init__.py  multimodal_part.py  multimodal_part_factory.py
geminiplayground/src/geminiplayground/parts/audio_part/: __init__.py  audio_part.py
geminiplayground/src/geminiplayground/parts/git_repo/: __init__.py  git_repo_part.py
geminiplayground/src/geminiplayground/parts/image_part/: __init__.py  image_part.py
geminiplayground/src/geminiplayground/parts/pdf_part/: __init__.py  pdf_part.py
geminiplayground/src/geminiplayground/parts/video_part/: __init__.py  video_part.py
geminiplayground/src/geminiplayground/utils/: __init__.py  file_utils.py  git_remote_progress.py  git_utils.py  image_utils.py  lib_utils.py  pdf_utils.py  singleton.py  video_utils.py
geminiplayground/src/geminiplayground/web/: api.py  app.py  ui.py  utils.py
geminiplayground/ui/: components.json  next.config.mjs  package-lock.json  package.json
geminiplayground/ui/src/app/: axios.js  globals.css  layout.js  page.js
tools/: utils.py  (+4 more)
(+237 files in other folders)
